--- a/part3/phonebook backend/package.json
+++ b/part3/phonebook backend/package.json
@@ -4,14 +4,15 @@
   "main": " index.js",
   "scripts": {
     "start": "node index.js",
-     "dev": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
