--- a/part3/phonebook backend/package.json
+++ b/part3/phonebook backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "heroku-postbuild": "cd ../phonebook-frontend && npm install && npm run build && cp -r dist ../phonebook-backend"
   },
   "author": "",
   "license": "ISC",
