--- a/part3/phonebook backend/package.json
+++ b/part3/phonebook backend/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-     "heroku-postbuild": "cd ../phonebook-frontend && npm install && npm run build && cp -r dist ../phonebook-backend"
+    "heroku-postbuild": "cd ../phonebook-frontend && npm install && npm run build && cp -r dist ../phonebook-backend"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongoose": "^8.16.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
